# spaceplusplus

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  asteroid-view.cpp  asteroid.cpp  build-cpp.sh  build-wasm.sh  classes.h  compile.sh  dock.cpp  draw.h  drone-view.cpp  drone.cpp  globe-model.h  interface.h  model.h  primitives.h  quaternion.h  service-worker.js  simulation.h  space.cpp  space.h  tug.cpp  utility.h
include/: agent.h  emplacement.h  interface.h  light.h  model.h  primitive.h  shipyard.h  texture.h
public/: agent.js  bathysphere.js  cadet.js  global.css  index.html  package.json  space.d.ts  space.js  space_bg.d.ts  space_bg.wasm  stream.js  tessellate.js  wind.json
public/glsl/: draw-fragment.glsl  draw-vertex.glsl  phong-fragment.glsl  phong-vertex.glsl  quad-vertex.glsl  rotation-fragment.glsl  rotation-vertex.glsl  screen-fragment.glsl  update-fragment.glsl
spacegame/: draw.cpp  main.cpp  primitives.cpp  simulation.cpp
spacegame/models/: agent.h  emplacement.h  interface.h  light.h  model.h  primitive.h  shipyard.cpp
src/: agent.rs  build.sh  lib.rs  main.cpp  stream.rs  tessellate.rs  test.cpp  texture.cpp  webgl.rs
